# easy-dbuspp

./: .clang-format  Doxyfile  Makefile  README.md  dbus_object.cpp  dbus_object.h  dbus_object.inl  main.cpp  meson.build  params.h  session_manager.cpp  session_manager.h  type_mapping.h  types.h
examples/: firefox_openurl.cpp  idle_detect.cpp  unix_fd_object.cpp  unix_fd_proxy.cpp
examples/proxy/: main.cpp
examples/service/: main.cpp
include/: bus_watcher.h  bus_watcher.inl  easydbuspp.h  g_thread_pool.h  idle_detector.h  idle_detector.inl  main_loop.h  object.h  object.inl  org_freedesktop_dbus_proxy.h  params.h  proxy.h  proxy.inl  session_manager.h  session_manager.inl  type_mapping.h  types.h
src/: bus_watcher.cpp  g_thread_pool.cpp  idle_detector.cpp  main_loop.cpp  object.cpp  org_freedesktop_dbus_proxy.cpp  proxy.cpp  session_manager.cpp
tests/: broadcast_signal.cpp  dbus_context.cpp  method_context.cpp  methods.cpp  param_names.cpp  pre_request_handler.cpp  properties.cpp  unicast_signal.cpp  watcher.cpp
